// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AliasesListEntry renders an AliasesListEntry that is not primary 1`] = `
<div>
  <li
    class="list-group-item d-flex flex-row justify-content-between align-items-center"
  >
    test-non-primary
    <div>
      <button
        class="me-2 btn btn-light"
        data-testid="aliasButtonMakePrimary"
        title="editor.modal.aliases.makePrimary"
        type="button"
      >
        <i
          class="fa  fa-star-o  "
        />
      </button>
      <button
        class="text-danger btn btn-light"
        data-testid="aliasButtonRemove"
        title="editor.modal.aliases.removeAlias"
        type="button"
      >
        <i
          class="fa  fa-times  "
        />
      </button>
    </div>
  </li>
</div>
`;

exports[`AliasesListEntry renders an AliasesListEntry that is primary 1`] = `
<div>
  <li
    class="list-group-item d-flex flex-row justify-content-between align-items-center"
  >
    test-primary
    <div>
      <button
        class="me-2 text-warning btn btn-light"
        data-testid="aliasIsPrimary"
        disabled=""
        title="editor.modal.aliases.isPrimary"
        type="button"
      >
        <i
          class="fa  fa-star  "
        />
      </button>
      <button
        class="text-danger btn btn-light"
        data-testid="aliasButtonRemove"
        title="editor.modal.aliases.removeAlias"
        type="button"
      >
        <i
          class="fa  fa-times  "
        />
      </button>
    </div>
  </li>
</div>
`;
